@@ -1,3 +1,4 @@
+	Implemented RFE #969325 (Login without edit)
 v 1.3.1
 	Fixed bug #973962
 	Table widths fixed in Konqueror
